--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -487,6 +487,7 @@
   </main>
   
   <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/color-manager.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/features/recently-removed.js') }}"></script>
   <script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
