新增更新描述列

--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -445,6 +445,7 @@
                           <th>尺寸</th>
                           <th>工况</th>
                           <th>更新日期</th>
+                          <th>更新描述</th>
                           <th class="add-header">添加</th>
                         </tr>
                         </thead>
