--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -471,7 +471,7 @@
       <!-- 图表 -->
       <div class="fc-chart-container bg-white rounded-xl shadow-md p-4 relative" id="chart-settings">
         <div id="chartRoot">
-          <iframe id="chartFrame" src="/static/echarts-render.html"
+          <iframe id="chartFrame" src="/static/echarts-render.html?v5"
                   allow="fullscreen" allowfullscreen
                   style="width:100%;height:100%;border:0;"></iframe>
         </div>
@@ -497,8 +497,7 @@
   <script src="{{ url_for('static', filename='js/color-manager.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/features/recently-removed.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/fancool.js', v=3) }}"></script>
-  
+  <script src="{{ url_for('static', filename='js/fancool.js', v=4) }}"></script>
   <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
   
 </body>
