--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -18,10 +18,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>风扇库</title>
 
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="preconnect" href="https://cdn.bootcdn.net" crossorigin>
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/solid.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=3) }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=3) }}">
 </head>
@@ -397,10 +396,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
-<<<<<<< HEAD
                           <th class="nowrap" id="searchXHeaderAir">转速</th>
-=======
->>>>>>> origin/main
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
@@ -422,10 +418,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
-<<<<<<< HEAD
                           <th class="nowrap" id="searchXHeaderLikes">转速</th>
-=======
->>>>>>> origin/main
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
@@ -471,7 +464,7 @@
       <!-- 图表 -->
       <div class="fc-chart-container bg-white rounded-xl shadow-md p-4 relative" id="chart-settings">
         <div id="chartRoot">
-          <iframe id="chartFrame" src="/static/echarts-render.html?v5"
+          <iframe id="chartFrame" src="/static/echarts-render.html?v12"
                   allow="fullscreen" allowfullscreen
                   style="width:100%;height:100%;border:0;"></iframe>
         </div>
