--- a/app/static/css/right-card.css
+++ b/app/static/css/right-card.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   height: clamp(480px, 62vh, 600px);
   min-height: 0;
+  min-width: 0;
 }
 
 @media (max-width: 600px) {
