--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <link rel="icon" type="image/png" href="/static/logo.png">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/tailwind.css') }}">
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
   <script>
     (function () {
       const savedTheme = localStorage.getItem('theme');
@@ -18,11 +17,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>风扇库</title>
 
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=3) }}">
+  <link rel="preconnect" href="https://cdn.bootcdn.net" crossorigin>
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/solid.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/tailwind.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/chart-renderer.css', v=1) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=6) }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=3) }}">
 </head>
 <body class="bg-gray-50 min-h-screen">
@@ -397,10 +397,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
-<<<<<<< HEAD
                           <th class="nowrap" id="searchXHeaderAir">转速</th>
-=======
->>>>>>> origin/main
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
@@ -422,10 +419,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
-<<<<<<< HEAD
                           <th class="nowrap" id="searchXHeaderLikes">转速</th>
-=======
->>>>>>> origin/main
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
@@ -471,9 +465,7 @@
       <!-- 图表 -->
       <div class="fc-chart-container bg-white rounded-xl shadow-md p-4 relative" id="chart-settings">
         <div id="chartRoot">
-          <iframe id="chartFrame" src="/static/echarts-render.html"
-                  allow="fullscreen" allowfullscreen
-                  style="width:100%;height:100%;border:0;"></iframe>
+          <div id="chartHost" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
         </div>
       </div>
     </div>
@@ -495,10 +487,11 @@
   
   <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
   <script src="{{ url_for('static', filename='js/color-manager.js', v=1) }}"></script>
+  <script src="{{ url_for('static', filename='vendor/echarts/5.4.2/echarts.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/chart-renderer.js', v=3) }}"></script>
   <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/features/recently-removed.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/fancool.js', v=3) }}"></script>
-  
+  <script src="{{ url_for('static', filename='js/recently-removed.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/fancool.js', v=9) }}"></script>
   <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
   
 </body>
