--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -486,6 +486,7 @@
   </main>
   
   <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/theme-pref.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='js/color-manager.js', v=1) }}"></script>
   <script src="{{ url_for('static', filename='vendor/echarts/5.4.2/echarts.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/chart-renderer.js', v=3) }}"></script>
