搜索模式工况信息补充

--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -210,7 +210,7 @@
                   </div>
                   
                   <div class="fc-form-row">
-                    <label class="block text-sm font-medium">参考价</label>
+                    <label class="block text-sm font-medium">参考价格(元)</label>
                     <div class="flex items-center gap-3">
                       <input type="number"
                              name="price_min"
